# cassette

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  cassette.cabal  package.yaml  tape.cabal
.chainlink/: hook-config.json  issues.db
.chainlink/rules/: project.md  quality.md  rigor.md  tracking-normal.md  tracking-relaxed.md  tracking-strict.md
.claude/skills/verify/: SKILL.md
.github/workflows/: release.yml
app/: Main.hs
docs/plans/: issue-05-distribution-design.md  issue-06-distribution-implementation.md  issue-11-crates-io-token.md  issue-12-crates-io-publish.md  issue-48-aur-package.md  issue-49-readme-demo-gif.md  issue-50-manpage-completions.md  issue-51-macos-build.md  issue-55-find-command.md
docs/superpowers/specs/: 2026-07-13-find-command-design.md  2026-07-13-stats-last-7-days-design.md
src/: Cassette.hs  Deck.hs  Event.hs  Render.hs  app.rs  cassette.rs  config.rs  find.rs  main.rs  output.rs  stats.rs  theme.rs  ui.rs
test/: CassetteSpec.hs  EventSpec.hs
