[package]
name = "cassette"
version = "0.8.0"
edition = "2021"

[dependencies]
ratatui = "0.29"
crossterm = "0.28"
dirs = "5"
serde = { version = "1", features = ["derive"] }
toml = "0.8"
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
unicode-width = "0.2.0"

[target.'cfg(unix)'.dependencies]
signal-hook = "0.3"
